plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.2'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'celulares'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {

    // WEB (controladores y MVC)
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // THYMELEAF (HTML dinámico)
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

    // JPA (base de datos)
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // SEGURIDAD
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // BASE DE DATOS EN MEMORIA
    runtimeOnly 'com.h2database:h2'

    // LOMBOK
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // TEST
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
    useJUnitPlatform()
}